# abac

./: DEFAULT-STDOUT  LICENSE  README.md  abac.cabal  stack.yaml  style_test.md
app/: Main.hs
bench/: AbacBench.hs
docs/examples/: Citations.hs  Counter.hs  Emphasis.hs  Paragraphs.hs  Passives.hs  Prepositions.hs  Sentences.hs  Texts.hs  alice.md  flatland.md  mobydick.md  pride-prejudice.md  utilit.md
src/: Abac.hs
src/Abac/: Builder.hs  Cli.hs  Internal.hs  Options.hs  Parser.hs  PartsOfSpeech.hs  PrettyResults.hs  Traverse.hs  Tutorials.hs  Types.hs
src/Abac/Cli/: Command.hs  UtilsCli.hs
src/Abac/Parser/: Blocks.hs  Document.hs  Examples.hs  Inlines.hs  Internal.hs  Markers.hs  Operations.hs  POS.hs  ParaParts.hs  Sections.hs  Tech.hs  Yaml.hs
src/Abac/PartsOfSpeech/: Counters.hs  Sentences.hs
src/Abac/Traverse/: Attributes.hs  Blocks.hs  Count.hs  Examples.hs  Expressions.hs  Inlines.hs  Internal.hs  InternalInternal.hs  Meta.hs  Ngrams.hs  ParaParts.hs  Position.hs  Predicates.hs  Quantify.hs  Searchable.hs  Sections.hs  Select.hs  Styling.hs  Tags.hs  Textify.hs  Words.hs
src/Abac/Tutorials/: Counter.lhs  Make.lhs  Search.lhs  Texts.hs
src/Abac/Types/: AbacType.hs  Options.hs  ParserTypes.hs  Results.hs
test/: AbacSpec.hs  Spec.hs  tst.txt
test/Abac/: InternalSpec.hs  ParserSpec.hs  PartsOfSpeechSpec.hs  PrettyResultsSpec.hs  TraverseSpec.hs  TutorialsSpec.hs
test/Abac/Cli/: CommandSpec.hs  UtilsCliSpec.hs
test/Abac/Parser/: BlocksSpec.hs  DocumentSpec.hs  ExamplesSpec.hs  InlinesSpec.hs  InternalSpec.hs  MarkersSpec.hs  OperationsSpec.hs  POSSpec.hs  ParaPartsSpec.hs  SectionsSpec.hs  TechSpec.hs  YamlSpec.hs
test/Abac/Traverse/: AttributesSpec.hs  BlocksSpec.hs  CountSpec.hs  ExamplesSpec.hs  ExpressionsSpec.hs  InlinesSpec.hs  InternalSpec.hs  MetaSpec.hs  NgramsSpec.hs  ParaPartsSpec.hs  PositionSpec.hs  PredicatesSpec.hs  QuantifySpec.hs  SearchableSpec.hs  SectionsSpec.hs  SelectSpec.hs  StylingSpec.hs  TagsSpec.hs  TextifySpec.hs  WordsSpec.hs
test/Abac/Tutorials/: MakeSpec.hs  SearchSpec.hs
